Minor adjustments, current issue lies with the parallax (1-3) images not showing.

--- a/main.css
+++ b/main.css
@@ -1,13 +1,11 @@
 html, body {
-  width: 100%;
   height: 100%;
-  margin: 0px;
-  padding: 0px;
+  width: 100%;
   overflow-x: hidden;
 }
 
 .parallax-one {
-  background-image: url(Images/MainBackground.jpg);
+  background-image: url(/Images/MainBackground.jpg);
   background-color: gray;
   min-height: 500px;
   background-attachment: fixed;
@@ -18,7 +16,7 @@ html, body {
 
 .parallax-two {
   background-image: url(Images/yosemite-2456491_1920.jpg);
-  background-color: gray;
+  background-color: black;
   min-height: 500px;
   background-attachment: fixed;
   background-position: center;
@@ -28,8 +26,7 @@ html, body {
 }
 
 .parallax-three {
-  background-image: url(Images/forest-547363_1920.jpg);
-  background-color: gray;
+  background-image: url(/Images/forest-547363_1920.jpg);
   max-height: 500px;
   background-attachment: fixed;
   background-position: center;
